--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,12 @@
 body {
     font-family: 'Inter', sans-serif;
     margin: 0;
-    background-color: #282D35;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 nav {
@@ -10,50 +15,124 @@ nav {
     gap: 10px;
     padding: 30px 25px;
     height: 60px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
+    z-index: 1;
+}
+
+nav.dark {
     background-color: #21222A;
 }
 
-.nav-title {
+.nav--logo {
+    height: 50px;
+}
+
+.nav--title {
     margin-right: auto;
     color: #61DAFB;
     font-weight: 700;
     font-size: 30px;
 }
 
-.nav-logo {
-    height: 50px;
-}
-
-.nav-sub-title {
+/* .nav--sub-title {
     color: #DEEBF8;
     font-weight: 600;
+} */
+
+.toggler {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.toggler p {
+    font-size: 0.75rem;
+    font-weight: 600;
+}
+
+.toggler--slider {
+    width: 30px;
+    height: 13px;
+    background-color: #000000;
+    border-radius: 2rem;
+    cursor: pointer;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border: 1px solid black;
+    box-sizing: content-box;
+}
+
+nav.dark .toggler--slider {
+    border-color: white;
+    background-color: #F5F5F5;
+}
+
+.toggler--slider_circle {
+    height: 13px;
+    width: 13px;
+    border-radius: 50%;
+    background-color: white;
+}
+
+nav.dark .toggler--slider_circle {
+    background-color: black;
+}
+
+.toggler--light {
+    color: #2B283A;
+}
+
+nav.dark .toggler--light {
+    color: #918E9B;
+}
+
+.toggler--dark {
+    color: #D5D4D8;
+}
+
+nav.dark .toggler--dark {
+    color: #FFFFFF;
+}
+
+nav.dark .toggler--slider {
+    justify-content: flex-end;
 }
 
 main {
     padding: 60px 30px;
-    color: white;
-    background-image: url("../public/images/react-icon-large.png");
+    background-image: url("../public/images/react-icon-light.png");
     background-repeat: no-repeat;
-    background-position: right 75%;
+    background-position: right center;
     background-size: 10%;
+    background-color: white;
+    color: #2B283A;
+    flex: 1 1 auto;
 }
 
-.main-title {
+main.dark {
+    background-image: url("../public/images/react-icon-dark.png");
+    background-color: #282D35;
+    color: white;
+}
+
+.main--title {
     margin: 0;
     font-size: 40px;
     letter-spacing: -0.05em;
 }
 
-.main-facts {
+.main--facts {
     margin-top: 30px;
     max-width: 400px;
 }
 
-.main-facts > li {
+.main--facts > li {
     padding-block: 10px;
 }
 
-.main-facts > li::marker {
+.main--facts > li::marker {
     color: #61DAFB;
     font-size: 1.4rem;
 }
